# salad

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
apptainer/: README.md  salad.def
data/afdb1024/: afdb2npz.py  compute_stats.py  merge_stats.py  test.cif
data/allpdb/: cif2npz.py  cifparser.sh  clusterSeqresNA_cluster.tsv  create_index.py  download_allpdb.sh  download_seqres.sh  get_chain_assemblies.py  split_seqres.py
examples/: inference_api.py
letters/: a_shape.csv  d_shape.csv  l_shape.csv  s_shape.csv
notebooks/: SALAD_example.ipynb
salad/data/: afdb.py  allpdb.py  architecture.py  convert.py  elements.py  mix_batch.py  periodic_table.py  synthete.py
salad/inference/: __init__.py  contacts.py  data.py  geometry.py  model.py  motif.py  sampling.py  symmetry.py
salad/modules/: all_pdb_diffusion.py  basic.py  binder_diffusion.py  condition_to_sequence.py  distance_to_structure_decoder.py  geometric.py  gradient_diffusion.py  invariant_structure_diffusion.py  latent_diffusion.py  lrnn.py  modified_denoising.py  nanofold.py  noise_schedule_benchmark.py  nuadm.py  one_atom_diffusion.py  partial_adm.py  protein_hallucination.py  protein_latent_diffusion.py  protein_structure_diffusion.py  protein_universal_denoiser.py  relax.py  structure_autoencoder.py  structure_autoencoder_diffusion.py  structure_to_sequence.py  transformer.py  triangle.py
salad/training/: eval_c2s.py  eval_confchange.py  eval_distance_to_structure_decoder.py  eval_faux_psp_gen.py  eval_gradient_diffusion.py  eval_large_gradient.py  eval_latent_diffusion.py  eval_motif_benchmark.py  eval_motif_benchmark_nocond.py  eval_motif_benchmark_without_genie2_format.py  eval_noise_schedule_benchmark.py  eval_part_multistate.py  eval_repeat.py  eval_s2s.py  eval_split_change.py  eval_split_change_redesign.py  eval_structure_autoencoder.py  eval_structure_autoencoder_diffusion.py  eval_sym.py  eval_ve_large.py  eval_ve_shape.py  train_c2s.py  train_gradient_diffusion.py  (+10 more)
scripts/: confchange_pmpnn_json.py  geometry_statistics.py  homomer_pmpnn_json.py  motif_pmpnn_json.py  motif_success.py  package_confchange.py  package_denovo.py  package_motif.py  pmpnn.sh  pmpnn_confchange.sh  pmpnn_fixed.sh  pmpnn_tied.sh  repeat_protein_pmpnn_json.py  split_confchange_fasta.py  success.py  success_chainlist.py  unique_chainlist.py
(+149 files in other folders)
