[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "salad"
version = "0.1.1"
description = "Protein structure generation with denoising models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["protein", "machine learning", "jax", "diffusion models"]
authors = [{ name = "Michael A. Jendrusch", email = "michael.jendrusch@embl.de" }]
maintainers = [{ name = "Michael A. Jendrusch", email = "michael.jendrusch@embl.de" }]

classifiers = [

]

dependencies = [
    "torch>=2.0",
    "biopython",
    "chex",
    "immutabledict",
    "ml-collections",
    "numpy",
    "scipy",
    "tqdm",
    "pydssp",
    "jax[cuda12]==0.6.0; 'arm' not in platform_machine and 'aarch' not in platform_machine",
    "jax==0.6.0; 'arm' in platform_machine or 'aarch' in platform_machine",
    "dm-tree",
    "dm-haiku @ git+https://github.com/deepmind/dm-haiku@v0.0.14",
    "numpy",
    "flexloop @ git+https://github.com/mjendrusch/flexloop.git",
    "gemmi"
]

[project.urls]
"Homepage" = "https://github.com/mjendrusch/salad"
"Bug reportes" = "https://github.com/mjendrusch/salad/issues"
"Source" = "https://github.com/mjendrusch/salad/"
